# PDXearch

./: .gitignore  .gitmodules  CMakeLists.txt  DEVELOPMENT.md  LICENSE  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: BumpDuckDB.yml  CheckDuckDBRelease.yml  MainDistributionPipeline.yml
scripts/: bump-duckdb.py
src/: pdxearch_extension.cpp
src/include/: pdxearch_extension.hpp
src/include/index/: pdxearch_blob_functions.hpp  pdxearch_index.hpp  pdxearch_index_utils.hpp  pdxearch_kmeans.hpp  pdxearch_module.hpp  pdxearch_wrapper.hpp
src/include/index/create/: pdxearch_index_create.hpp  pdxearch_index_global_create.hpp
src/include/index/search/: pdxearch_index_filtered_scan_logical.hpp  pdxearch_index_filtered_scan_physical.hpp  pdxearch_index_global_filtered_scan_physical.hpp  pdxearch_index_global_scan.hpp  pdxearch_index_scan_logical.hpp  pdxearch_index_scan_physical.hpp
src/include/pdxearch/: common.hpp  pdxearch.hpp
src/include/pdxearch/db_mock/: predicate_evaluator.hpp
src/include/pdxearch/distance_computers/: avx2_computers.hpp  avx512_computers.hpp  base_computers.hpp  neon_computers.hpp  scalar_computers.hpp
src/include/pdxearch/index_base/: pdx_ivf.hpp  pdx_ivf2.hpp
src/include/pdxearch/lib/: lib.hpp
src/include/pdxearch/pruners/: adsampling.hpp  bond.hpp
src/include/pdxearch/quantizers/: global.h  global.hpp  scalar.hpp
src/include/pdxearch/utils/: benchmark_utils.hpp  file_reader.hpp  matrix.h  tictoc.hpp
src/index/: CMakeLists.txt  pdxearch_blob_functions.cpp  pdxearch_index.cpp  pdxearch_index_info_function.cpp
src/index/create/: pdxearch_index_create.cpp  pdxearch_index_create_plan.cpp  pdxearch_index_global_create.cpp
src/index/search/: pdxearch_index_filtered_scan_logical.cpp  pdxearch_index_filtered_scan_physical.cpp  pdxearch_index_global_filtered_scan_physical.cpp  pdxearch_index_global_scan.cpp  pdxearch_index_scan_logical.cpp  pdxearch_index_scan_physical.cpp  pdxearch_scan_optimizer.cpp
test/: README.md
test/assets/: README.md
test/sql/create/: index_create_table_empty.test  index_create_validate_column.test  index_create_validate_parameters.test
test/sql/filtered_search/: index_filtered_scan_k.test  index_filtered_scan_k_1.test  index_filtered_scan_no_passing_tuples.test  index_filtered_scan_optimizer.test
test/sql/search/: index_scan_all_equal_embeddings.test  index_scan_blob_query.test  index_scan_fixed_clusters.test  index_scan_fixed_clusters_one.test  index_scan_fixed_clusters_small_rowgroup.test  index_scan_monotonic_recall.test  index_scan_optimizer.test  index_scan_random_embeddings.test  index_scan_toy_embeddings.test  index_scan_uncommon_dimensions.test
